# MyFinances

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.github_actions  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .typos.toml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pulumi.yaml  README.md  SECURITY.md  WHERE_ARE_THINGS.md  celerybeat-schedule.bak  index.html  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.gh_actions.txt  requirements.txt  sitemap.xml  suggestions.improvement.txt  tailwind.config.js  test.json  vercel.json  webpack.common.js  webpack.dev.js  webpack.prod.js
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-ideas.yml  bug-report.md  config.yml  enhance.md  feature-request.md  feature.md  idea.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: check_typos.yml  ci-tests.yml  codacy.yml  codeql.yml  dependancy_review.yml  dependency-review.yml  docs.yml  idea_project_label_update.yml  management_bot_lambda.yml  ossar.yml  preview-docs.yml  publish_to_github_packages  publish_to_github_packages.yml  push_release.yml  run_black_formatter.yml  run_black_linter.yml  run_djlint.yml  run_djlint_formatter.yml  run_mypy.yml  run_mypy.yml.disabled  run_tests.yml  snyk-security.yml  stale_prs.yml  test_coverage.yml  tests.yml
assets/data/: default_quota_limits.json
assets/scripts/: bank_details_dropdown.js  font_awesome.js  htmx.js  init.js  receipt_downloads.js  sortable_form_builder.js  tableify.js  validate_payment_details.js
backend/: __init__.py  admin.py  apps.py  auth_backends.py  celery.py  context_processors.py  decorators.py  managers.py  middleware.py  modals.py  models.py  signals.py  something.py  urls.py  utils.py
backend/api/: urls.py
backend/boto3/: handler.py
backend/clients/: clients.py  models.py  signals.py
backend/components/: dashboard_chart.py
backend/core/: constants.py  models.py
backend/data/: default_email_templates.py  default_feature_flags.py  default_quota_limits.py  default_usage_plans.py
backend/finance/: models.py
backend/migrations/: 0001_initial.py  0002_alter_receipt_date_uploaded.py  0002_alter_usersettings_options.py  0002_initial.py  0002_usersettings_currency.py  0003_client_company_client_is_representative.py  0003_rename_errors_error_and_more.py  0004_invoice_client_is_representative.py  0004_remove_client_name_client_address_client_city_and_more.py  0005_client_active.py  0005_invoiceproduct.py  0006_receipt.py  0006_receipt_merchant_store_receipt_purchase_category.py  0007_alter_receipt_merchant_store_and_more.py  0007_usersettings_profile_picture.py  0008_receiptdownloadtoken.py  0008_team.py  0009_alter_invoice_sort_code.py  0009_notification.py  0010_receiptdownloadtoken_expires.py  0010_teaminvitation.py  0010_user_logged_in_as_team.py  0011_alter_team_leader.py  0011_alter_teaminvitation_team_alter_teaminvitation_user.py  0011_rename_expires_receiptdownloadtoken_delete_in.py  0012_alter_teaminvitation_team_alter_teaminvitation_user.py  0012_receipt_organization_alter_receipt_user_and_more.py  0012_rename_delete_in_receiptdownloadtoken_delete_at_and_more.py  0013_auditlog_organization_client_organization_and_more.py  0013_remove_receipt_user_teaminvitation_code.py  0014_notification_extra_type_notification_extra_value.py  0014_receipt_user.py  0015_alter_notification_message.py  0015_alter_notification_user_alter_team_name.py  0016_alter_invoice_logo_alter_receipt_image_and_more.py  0016_alter_notification_action.py  0016_usersettings_allow_receipt_parsing.py  0017_alter_notification_message.py  0017_featureflags.py  0018_remove_client_first_name_remove_client_last_name_and_more.py  (+109 more)
backend/models/: __init__.py  api_key.py  client.py  error.py  feature_flags.py  invoice.py  logger.py  notification.py  password_secret.py  quota.py  receipt.py  user.py
backend/models_db/: client.py  error.py  invoice.py  logger.py  notification.py  receipt.py  utils.py
backend/onboarding/: models.py
backend/post_webhooks/: helpers.py  models.py  post.py
backend/service/: __init__.py
backend/signals/: __init__.py  migrations.py  signals.py
backend/storage/: file_storage.py  models.py
backend/templatetags/: cal_filters.py  custom_filters.py  dictfilters.py  feature_enabled.py  listfilters.py  modals.py  strfilters.py  utils.py
backend/types/: emails.py  htmx.py  requests.py
backend/utils/: calendar.py  dataclasses.py  feature_flags.py  generator_public_id.py  http_utils.py  quota_limit_ops.py  service_retry.py
backend/webhooks/: urls.py  webhook_task_queue_handler.py
billing/: __init__.py  apps.py  billing_settings.py  decorators.py  middleware.py  models.py  urls.py
billing/data/: default_usage_plans.py
billing/migrations/: 0001_initial.py  0002_subscriptionplan_stripe_price_id.py  0003_stripewebhookevent_usersubscription_uuid_and_more.py  0004_auto_20240830_1655.py  0005_auto_20240830_1655.py  0006_billingusage.py
billing/service/: checkout_completed.py  entitlements.py  get_user.py  plan_change.py  price.py  refresh_subscriptions.py  stripe_customer.py  subscription_ended.py  subscription_handler.py  test.py
changelog/: index.html
components/: +messages_list.html  +modal.html  +profile_picture.html  components.py
contributing/: index.html
docs/: CNAME  README.md  _navbar.md  _sidebar.md  changelog.md  how-to-contribute.md  index.html  index.js  index.md  structure.md
documentation/: SETUP.md  markdown.md  social_login.md
env/: MyFinances.env
feeds/: apps.py  consumers.py  models.py  routing.py  signals.py  tasks.py  urls.py  views.py
getting-started/: index.html
infrastructure/: Dockerfile  docker-compose.ci.yml
js/: extra.js
overrides/: main.html
restAPI/: serializers.py  urls.py
search/: search_index.json
settings/: asgi.py  aws_s3.py  celery.py  helpers.py  local_settings.py  prod_settings.py  settings.py  wsgi.py
tests/: handler.py
user-guide/: index.html
(+1144 files in other folders)
