[tool.poetry]
name = "MyFinances"
version = "0.3.0"
description = "github.com/TreyWW/MyFinances"
authors = ["TreyWW"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bleach = "6.1.0"
oauthlib = "3.2.2"
boto3 = "1.34.76"
django-storages = "1.14.2"
pillow = "10.3.0"
tblib = "^3.0.0"
forex-python = "^1.8"
django = "^5.0.2"
django-mathfilters = "^1.0.0"
sample-helper-aws-appconfig = "^2.1.0"
redis = { extras = ["hiredis"], version = "^5.0.1" }
boto3-stubs = { extras = [
    "sesv2",
    "events",
    "scheduler",
    "iam",
    "stepfunctions",
], version = "^1.34.76" }
djangorestframework = "^3.14.0"
django-tz-detect = "^0.5.0"
typos = "^1.20.3"
pre-commit = "^3.7.0"
pulumi-aws = "^6.29.0"
mypy = "1.7.1"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}

[tool.poetry.group.django.dependencies]
Django = "^5.0.2"
gunicorn = "21.2.0"
social-auth-app-django = "5.4.0"
django-sendgrid-v5 = "1.2.3"
django-environ = "0.11.2"
django-extensions = "3.2.3"
python-dateutil = "2.9.0"
django-mathfilters = "1.0.0"
django-ratelimit = "4.1.0"
django-htmlmin = "0.11.0"
python-memcached = "1.62"
django-htmx = "1.17.3"
django-login-required-middleware = "0.9.0"
django-debug-toolbar = "4.3.0"
django-components = "0.37"
django-markdownify = "0.9.3"
shortuuid = "1.0.13"
model-bakery = "1.17.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
mkdocs-git-committers-plugin-2 = "^2.3.0"

[tool.poetry.group.mysql]
optional = true

[tool.poetry.group.mysql.dependencies]
mysqlclient = "2.2.0"
mariadb = "1.1.8"

[tool.poetry.group.postgres]
optional = true

[tool.poetry.group.postgres.dependencies]
psycopg2 = "2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
djlint = "^1.34.1"
coverage = "^7.4.4"
pre-commit = "^3.7.0"
bump-my-version = "^0.19.3"

[tool.djlint]
profile = "django"
max_line_length = 110

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.3.0"
commit = true
commit_args = "-s"
tag = true
tag_name = "v{new_version}"
sign_tags = true
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>post)\\d+\\.dev\\d+)?"
serialize = [
    "{major}.{minor}.{patch}.{dev}{$PR_NUMBER}.dev{distance_to_latest_tag}",
    "{major}.{minor}.{patch}"
]

message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "backend/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]

[tool.django-stubs]
django_settings_module = "settings.settings"

[[tool.mypy.overrides]]
module = [
    "debug_toolbar",
    "django.core.cache.backends.redis",
    "django_ratelimit.core",
    "django_ratelimit.decorators",
    "django_ratelimit.exceptions",
    "django_ratelimit",
    "environ",
    "forex_python.converter",
    "login_required",
    "storages.backends.s3",
    "social_django.models"
]
ignore_missing_imports = true
