[tool.poetry]
name = "MyFinances"
version = "0.9.4"
description = "github.com/TreyWW/MyFinances"
authors = ["TreyWW"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bleach = "6.3.0"  # used for HTML sanitation
boto3 = "1.43.1"  # AWS
django-storages = "1.14.6"  # AWS S3
pillow = ">=12.2.0"  # Images
tblib = "^3.0.0"  # Exceptions and Tracebacks
django = "^5.2.13"
django-mathfilters = "^1.0.0"
redis = { extras = ["hiredis"], version = "^7.4.0" }
django-webpack-loader = "^3.1.0"
django-silk = "^5.1.0"
djangorestframework = "^3.17.1"
drf-yasg = "^1.21.7"

setuptools = "^82.0.1"
stripe = "^15.1.0"
[tool.poetry.group.mypy.dependencies]
mypy = "1.19.1"
django-stubs = { version = "^5.2.7" }
django-stubs-ext = { version = "^6.0.3" }
djangorestframework-stubs = { extras = ["compatible-mypy"], version = "^3.16.9" }#
boto3-stubs = { extras = [
    "sesv2",
    "events",
    "scheduler",
    "dynamodb",
    "iam",
    "stepfunctions",
], version = "^1.34.76" }
grpcio = "^1.80.0"
djangorestframework = "^3.17.1"
django-tz-detect = "^0.5.0"
typos = "^1.46.0"
pre-commit = "^4.6.0"
pulumi-aws = "^7.28.0"
types-python-dateutil = "^2.9.0.20260408"
types-markdown = "^3.10.2.20260408"
types-pygments = "^2.20.0.20260408"
types-cffi = "^2.0.0.20260429"
types-protobuf = "^7.34.1.20260408"
types-psycopg2 = "^2.9.21.20260422"
types-pycurl = "^7.45.7.20260408"
types-six = "^1.17.0.20260408"

[tool.poetry.group.django.dependencies]
Django = "^5.2.13"
gunicorn = "25.3.0"
social-auth-app-django = "5.9.0"
django-environ = "0.13.0"
django-extensions = "4.1"
python-dateutil = "2.9.0.post0"
django-mathfilters = "1.0.0"
django-ratelimit = "4.1.0"
python-memcached = "1.62"
django-htmx = "1.27.0"
django-login-required-middleware = "0.9.0"
django-components = "0.149.0"
django-markdownify = "0.9.6"
shortuuid = "1.0.13"
model-bakery = "1.23.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.7.6"
mkdocs-git-committers-plugin-2 = "^2.3.0"

[tool.poetry.group.mysql]
optional = true

[tool.poetry.group.mysql.dependencies]
mysqlclient = "2.2.8"
mariadb = "1.1.14"

[tool.poetry.group.postgres]
optional = true

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "2.9.12"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
djlint = "^1.34.1"
coverage = "^7.13.5"
pre-commit = "^4.6.0"
bump-my-version = "^1.3.0"

[tool.djlint]
profile = "django"
max_line_length = 110

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.9.4"
commit = true
commit_args = "-s"
tag = true
tag_name = "v{new_version}"
sign_tags = true
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>post)\\d+\\.dev\\d+)?"
serialize = [
    "{major}.{minor}.{patch}.{dev}{$PR_NUMBER}.dev{distance_to_latest_tag}",
    "{major}.{minor}.{patch}"
]

message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "backend/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]
disable_error_code = ["annotation-unchecked"]
explicit_package_bases = true
incremental = false
exclude = [
    "venv",
    ".venv",
    "env",
    "ENV",
    "ENV_DIR",
    "env.bak",
    "venv.bak",
    "media",
    'billing/',
    "./billing/",
    "./billing/service/"
]

[tool.django-stubs]
django_settings_module = "settings.settings"

[[tool.mypy.overrides]]
module = [
    "django.core.cache.backends.redis",
    "django_ratelimit.core",
    "django_ratelimit.decorators",
    "django_ratelimit.exceptions",
    "django_ratelimit",
    "environ",
    "login_required",
    "storages.backends.s3",
    "social_django.models",
    "emails",
    "step_functions",
    "django_components",
    "drf_yasg",
    "drf_yasg.utils",
    "drf_yasg.views",
    "xhtml2pdf",
    "celery"
]
ignore_missing_imports = true
